<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".QuizQuestionsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/txt_question" />

            <ImageView
                android:id="@+id/iv_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/iv_flag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_question"
                tools:src="@drawable/ic_flag_of_argentina" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:indeterminate="false"
                android:max="9"
                android:minHeight="50dp"
                android:progress="0"
                app:layout_constraintEnd_toStartOf="@id/tv_progress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_flag" />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/progress_bar"
                app:layout_constraintTop_toTopOf="@id/progress_bar"
                tools:text="0/9" />

            <TextView
                android:id="@+id/tv_first_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/gray"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progress_bar"
                tools:text="Apple" />

            <TextView
                android:id="@+id/tv_second_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/gray"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_first_option"
                tools:text="Banana" />

            <TextView
                android:id="@+id/tv_third_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/gray"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_second_option"
                tools:text="Citron" />

            <TextView
                android:id="@+id/tv_fourth_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/gray"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_third_option"
                tools:text="Dragon Fruit" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:background="@color/design_default_color_primary"
                android:text="@string/btn_submit"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_fourth_option" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>